--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Salary Estimator Pro</title>
 </head>
 <body>
-    <header>
-        <h1 title="style.css">SALARY ESTIMATOR PRO</h1>
+    <header title="style.css">
+        <h1>SALARY ESTIMATOR PRO</h1>
     </header>
 
     <main>
@@ -30,7 +30,12 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Group 51. All rights reserved.</p>
+        <pre style="font-family: cursive;">
+        &copy; 2025 Group 51. 
+        DIT/2025/40634 JULIUS NJENGA
+        DIT/2025/32518 TIMOTHY MUTIE
+        DIT/2025/43982 IRENE MWENDE
+        All rights reserved.</pre>
     </footer>
     
     <script src="script.js"></script>
